border radius correction on collapseArea

--- a/src/components/Collapse/collapse.module.css
+++ b/src/components/Collapse/collapse.module.css
@@ -71,7 +71,7 @@ button {
 
 @media screen and (min-width: 769px) {
     .collapseArea {
-        border-radius: 0 0.625rem 0.625rem 0;
+        border-radius: 0 0 0.625rem 0.625rem;
     }
 
     button {
